# CircuitPython_uplot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.rst  README.rst.license  optional_requirements.txt  pyproject.toml  requirements.txt  uplot.py
.github/workflows/: build.yml  release_gh.yml  release_pypi.yml
circuitpython_uplot/: __init__.py  bar.py  cartesian.py  fillbetween.py  icons.py  logging.py  map.py  pie.py  plot.py  polar.py  scatter.py  shade.py  svg.py  ubar.py  ucartesian.py  ufillbetween.py  ulogging.py  umap.py  upie.py  uplot.py  uscatter.py  usvg.py
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst  logging.png.license  quick_start.rst  requirements.txt  uplot_ex8.jpg.license
docs/_static/: Logo.png.license
examples/: bar_3Dbars.py  bar_color_changing.py  bar_colorpalette.py  bar_example.py  bar_scale_example.py  bar_updating_values.py  cartersian_and_scatter_polyfit_example.py  cartesian_advanced.py  cartesian_fill.py  cartesian_koch.py  cartesian_koch_2.py  cartesian_logging_data.py  cartesian_table.py  cartesian_trig_functions.py  display_shapes.py  fillbetween.py  integration_example.py  lissajous_curves.py  logging.py  logging_animation.py  logging_changing_values.py  logging_fill.py  logging_limits.py  logging_simple_test.py  logging_table.py  logging_with_dial_gauge.py  map.py  pie_example.py  plot_example.py  plot_line_styles.py  plot_polar_advanced_example.py  plot_simpletest.py  polar_advanced.py  polar_example.py  polar_plots.py  readme_example.py  scatter.py  scatter_circle_radius.py  scatter_pointers.py  scatter_using_different_datasets.py  (+55 more)
examples/fonts/: LibreBodoniv2002-Bold-10.bdf  LibreBodoniv2002-Regular-17.bdf
