# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]

[project]
name = "circuitpython-uplot"
description = "framework to display different plots in displayio. similar to widget"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [{ name = "JDM", email = "uplot@mailmeto.mozmail.com" }]
urls = { Homepage = "https://github.com/jposada202020/CircuitPython_uplot" }
keywords = [
    "circuitpython",
    "uplot",
    "microplot",
    "bar",
    "stackplot",
    "fillbetween",
    "piechart",
    "scatter",
    "line",
    "displayio",
    "graphics",
    "library",
    "ulab",
    "svg",
    "widget",
    "graph",
    "graphing",
    "chart",
    "charts",
    "plotting",
    "plot",
    "plotter",
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["circuitpython_uplot"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { optional = { file = ["optional_requirements.txt"] } }
